<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?surface">

    <TextView
        android:id="@+id/text_view_enter_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_title"
        android:textAppearance="@style/TextStyle.Regular.Primary.22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="21dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_input_hint"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:textAppearance="@style/TextStyle.Regular.Primary.22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_enter_email_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_send_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_forward"
        app:tint="@android:color/white" />

    <ProgressBar
        android:id="@+id/progress_bar_email_sending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:indeterminateTint="?rainbow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_view_check_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="8dp"
        android:lineHeight="28dp"
        android:text="@string/check_your_email"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle.Regular.Primary.22dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/text_view_email_was_sent_to"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_view_email_was_sent_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:lineHeight="24dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle.Regular.Primary.16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/text_view_email_deliver_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_check_email" />

    <TextView
        android:id="@+id/text_view_email_deliver_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:lineHeight="16dp"
        android:text="@string/email_deliver_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle.Regular.Secondary.16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_email_was_sent_to" />

    <TextView
        android:id="@+id/text_view_resend_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/resend_email"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle.Bold.Rainbow.16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>